# infolab-lights

./: .dir-locals.el  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  flowers.js  mix.exs
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: elixir.yml  rust.yml
config/: config.exs  prod.exs  test.exs
control/: .gitignore  Cargo.toml  Cross.toml  Dockerfile  InfoLab.xml  README.md  check-lights-traffic.service  check-lights-traffic.sh  check-lights-traffic.timer  docker-compose.yml  infolab-lights-restart.service  infolab-lights-restart.timer  infolab-lights.service
control/docker/: Dockerfile
control/src/: incoming.rs  main.rs  outgoing.rs  pixel.rs  scene.rs  screen.rs
lib/: infolab_light_games.ex
lib/infolab_light_games/: application.ex  game_status.ex  matrix.ex  screen.ex
lib/infolab_light_games_web/: endpoint.ex  router.ex  screen_stream.ex
lib/infolab_light_games_web/channels/: user_socket.ex
lib/infolab_light_games_web/live/: page_live.ex  page_live.html.leex
lib/infolab_light_games_web/views/: layout_view.ex
test/infolab_light_games_web/views/: layout_view_test.exs
web/: .dockerignore  .formatter.exs  .gitignore  Blobs.js  Dockerfile  Makefile  README.md  flake.nix  justfile  mix.exs
web/assets/: build.js  package-lock.json  package.json  webpack.config.js
web/assets/css/: app.scss
web/assets/js/: app-nonlive.js  app.js  playground.js
web/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  releases.exs  runtime.exs  test.exs
web/lib/: infolab_light_games_web.ex
web/lib/infolab_light_games/: application.ex  bans.ex  coordinator.ex  coordinator_status.ex  fader.ex  game_status.ex  game_supervisor.ex  matrix.ex  matrix_pow.ex  native_matrix.ex  pixel.ex  presence.ex  scheduler.ex  screen.ex
web/lib/infolab_light_games_web/: endpoint.ex  metric_storage.ex  router.ex  screen_stream.ex  (+1 more)
web/rel/: config.exs
(+82 files in other folders)
