[package]
name = "infolab-light-controller"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tungstenite = { version = "0.15.0", features = ["rustls-tls-native-roots"] }
url = "2.2.2"
roxmltree = "0.14.1"
num-traits = "0.2.14"
itertools = "0.10.1"
base64 = "0.13.0"
miniz_oxide = "0.4.4"
getset = "0.1.1"
zerocopy = "0.6.0"
speedy = "0.8.0"
structopt = "0.3.25"
bmp = "0.5.0"

[features]
